// Protobuf definitions for service pagination.
// We base64 encode proto binary representations for next_page_tokens in the
// API following https://cloud.google.com/apis/design/design_patterns#list_pagination

syntax = "proto3";

package bio.terra.tanagra.utils;
option java_package = "bio.terra.tanagra.proto.utils.pagination";
option java_multiple_files = true;

// A simple pagination message with the page size and offset for the page.
message PageSizeOffset {
  // The number of results to return per page.
  int32 page_size = 1;
  // The offset into the result for the page.
  int32 offest = 2;
}
